<resources>
    <string name="app_name">Agenda Universitária</string>
    <string name="app_version">1.0</string>
    <string name="stringLoginActivityEditLogin">Enter your e-mail</string>
    <string name="stringLoginActivityEditPassword">Enter your password</string>
    <string name="stringLoginActivityButtonLogin">LOGIN</string>
    <string name="stringLoginActivityNoRegistration">No registration? Click here</string>
    <string name="stringRegisterActivityTitle">Register</string>
    <string name="descriptionLogo">Project logo</string>
    <string name="descriptionUser">User photo</string>
    <string name="stringRegisterActivityEditName">Name</string>
    <string name="stringRegisterActivityEditEmail">E-mail</string>
    <string name="stringRegisterActivityEditUser">User</string>
    <string name="stringRegisterActivityEditPassword">Password</string>
    <string name="stringRegisterActivityButtonRegister">REGISTER</string>
    <string name="stringRegisterActivityButtonCancel">CANCEL</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="stringItemMenuTasks">Tasks</string>
    <string name="stringItemMenuSubjects">Subjects</string>
    <string name="stringItemMenuSchedules">Schedules</string>
    <string name="stringItemMenuGrades">Grades</string>
    <string name="stringItemMenuCalendar">Calendar</string>
    <string name="stringItemMenuComplementaryHours">Complementary Hours</string>
    <string name="stringItemMenuAbout">About</string>
    <string name="stringHomeActivityToDoText">To do</string>
    <string name="stringHomeActivityDoingText">Doing</string>
    <string name="stringHomeActivityDoneText">Done</string>
    <string name="stringCalendarActivityTitle">Calendar</string>
    <string name="stringGradesActivityTitle">Grades</string>
    <string name="stringProfileActivityButtonUserPhoto">Take picture</string>
    <string name="stringProfileActivityButtonLogout">LOGOUT</string>
    <string name="stringSchedulesActivityTitle">Schedules</string>
    <string name="stringSchedulesActivitySubjectCode">Code</string>
    <string name="stringSchedulesActivitySubjectMonday">Mon</string>
    <string name="stringSchedulesActivitySubjectTuesday">Tue</string>
    <string name="stringSchedulesActivitySubjectWednesday">Wed</string>
    <string name="stringSchedulesActivitySubjectThursday">Thu</string>
    <string name="stringSchedulesActivitySubjectFriday">Fri</string>
    <string name="stringComplementaryHoursActivityTitle">Complementary Hours</string>
    <string name="stringComplementaryHoursActivityTitleTeaching">Teaching</string>
    <string name="stringComplementaryHoursActivityTitleResearch">Research</string>
    <string name="stringComplementaryHoursActivityTitleExtension">Extension</string>
    <string name="stringTasksActivityTitle">Tasks</string>
    <string name="stringSubjectsActivityTitle">Subjects</string>
    <string name="stringAboutActivityTitle">About</string>
    <string name="stringItemMenuProfile">Profile</string>
    <string name="stringRegisterSubjectsEditTextName">Name</string>
    <string name="stringRegisterSubjectsEditTextTeacher">Teacher</string>
    <string name="stringRegisterSubjectsTitle">Subjects registration</string>
    <string name="stringRegisterSubjectsEditTextCode">Code</string>
    <string name="stringRegisterSubjectsEditTextStartTime">Start</string>
    <string name="stringRegisterSubjectsEditTextEndTime">End</string>
    <string name="stringRegisterSubjectsSchedulesTitle">Schedule</string>
    <string name="stringRegisterSubjectsDaysOfTheWeekTitle">Days of the week</string>
    <string name="stringRegisterSubjectsCheckBoxMonday">Monday</string>
    <string name="stringRegisterSubjectsCheckBoxTuesday">Tuesday</string>
    <string name="stringRegisterSubjectsCheckBoxWednesday">Wednesday</string>
    <string name="stringRegisterSubjectsCheckBoxThursday">Thursday</string>
    <string name="stringRegisterSubjectsCheckBoxFriday">Friday</string>
    <string name="stringRegisterSubjectsButtonRegister">Save</string>
    <string name="stringRegisterSubjectsButtonCancel">Cancel</string>
    <string name="stringRegisterTasksTitle">Tasks registration</string>
    <string name="stringRegisterTasksEditTextName">Name</string>
    <string name="stringRegisterTasksEditTextDate">Date</string>
    <string name="stringRegisterTasksEditTextHour">Hour</string>
    <string name="stringRegisterTasksEditTextSubject">Subject</string>
    <string name="stringRegisterTasksEditTextDescription">Description</string>
    <string name="stringRegisterComplementaryHoursTitle">Complementary hours registration</string>
    <string name="stringRegisterComplementaryHoursDescription">Description</string>
    <string name="stringRegisterComplementaryHoursWorkload">Workload</string>
    <string name="stringRegisterTasksButtonRegister">Save</string>
    <string name="stringRegisterTasksButtonCancel">Cancel</string>
    <string name="stringRegisterComplementaryHoursButtonRegister">Save</string>
    <string name="stringRegisterComplementaryHoursButtonCancel">Cancel</string>
    <string name="stringCardGradesTitleSituation">Final grade and situation: </string>
    <string name="stringCardSchedulesNameCode"> Code: </string>
    <string name="stringComplementaryHoursTypesTeaching">Teaching</string>
    <string name="stringComplementaryHoursTypesResearch">Research</string>
    <string name="stringComplementaryHoursTypesExtension">Extension</string>
    <string name="help">In this application the Kanban method is used to manage the tasks. To update the status of your task you must select one of the two icons displayed on the task card</string>
    <string name="titleHelp">Help</string>


    <string name="textYourDisciplines">Your subjects</string>
    <string name="buttonAdd">TO ADD</string>
    <string name="textLogoNotes">Grades</string>
    <string name="textLogoSchedules">Schedules</string>
    <string name="editTeacher">Teacher</string>

    <string name="editStart">Start</string>
    <string name="editEnd">End</string>
    <string name="select">Select</string>
    <string name="medium">High school</string>
    <string name="technical">Technical</string>
    <string name="graduation">Graduation</string>
    <string name="errorRegister">User/Email already registered</string>
    <string name="sucessRegister">Saved successfully :D</string>
    <string name="errorSaving">Error saving :(</string>
    <string name="errorLogin">Invalid password or login</string>
    <string name="welcome">Welcome</string>
    <string name="sucessExcluded">Successfully excluded</string>
    <string name="textYoutSchedules">Registered disciplines</string>
    <string name="fields">Please fill in the fields</string>
    <string name="textYourGrades">Your grades</string>
    <string name="av1">AV1</string>
    <string name="p1">P1</string>
    <string name="av2">AV2</string>
    <string name="p2">P2</string>
    <string name="av3">AV3</string>
    <string name="p3">P3</string>
    <string name="end">R</string>
    <string name="situation">Sit</string>
    <string name="media">M</string>
    <string name="reprovado">Rep</string>
    <string name="deleteSucess">Successful deleted</string>
    <string name="sucessUpdate">Sucessful update</string>
    <string name="sucessReset">Sucessful reset</string>
    <string name="invalidCPF">Invalid CPF</string>
    <string name="invalidDate"> Invalid date</string>
    <string name="invalidYearSemester">expected format: XXXX/XX</string>
    <string name="confirmation">Confirmation</string>
    <string name="isSure">Is sure?</string>
    <string name="buttonDelete">DELETE</string>
    <string name="invalidHour"> Please fill in between 8 am and 10 pm </string>


</resources>