<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/loginActivityEditLoginLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/descriptionLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginActivityEditLoginLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="250dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginActivityEditLogin"
            style="@style/text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_perfil"
            android:hint="@string/stringLoginActivityEditLogin"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginActivityEditPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/loginActivityEditLoginLayout"
        app:layout_constraintStart_toStartOf="@+id/loginActivityEditLoginLayout"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityEditLoginLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginActivityEditPassword"
            style="@style/text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stringLoginActivityEditPassword"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginActivityNoRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringLoginActivityNoRegistration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityButtonLogin"
        />

    <Button
        android:id="@+id/loginActivityButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/stringLoginActivityButtonLogin"
        android:textColor="@color/white"
        android:backgroundTint="?attr/colorSecondaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityEditPasswordLayout" />




</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>