<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardSchedules"
    android:layout_marginTop="1dp"
    android:background="@drawable/rounded"
    android:padding="3dp">

    <TextView
        android:id="@+id/cardSchedulesNameCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringCardSchedulesNameCode"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/cardSchedulesCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/cardSchedulesNameCode"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/schedulesActiyLinearLayout"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardSchedulesCode"
        >

        <TextView
            android:id="@+id/schedulesActivitySubjectMonday"
            android:layout_width="80dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/stringSchedulesActivitySubjectMonday"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/schedulesActivitySubjectTuesday"
            android:layout_width="80dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/stringSchedulesActivitySubjectTuesday"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/schedulesActivitySubjectWednesday"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/stringSchedulesActivitySubjectWednesday"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/schedulesActivitySubjectThursday"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/stringSchedulesActivitySubjectThursday"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/schedulesActivitySubjectFriday"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/stringSchedulesActivitySubjectFriday"
            android:textSize="20sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schedulesActiyLinearLayout">

        <TextView
            android:id="@+id/cardSchedulesMonday"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/cardSchedulesTuesday"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cardSchedulesWednesday"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cardSchedulesThursday"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/cardSchedulesFriday"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>
